syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package example;

// 和package保持一致
option go_package = "example";


// 请求体: XXXReq
message GetPersonReq{
    uint64 uid = 1;
}

message GetPersonRsp{
    int32 code = 1; // 错误码
    string msg = 2; // 信息
    string log_id = 3; // 链路追踪id
    PersonData data = 4; // 响应体数据
    message PersonData{
        uint64 uid = 1;
        string name = 2;
        int32 age = 3;
        string phone = 4;
        string email = 5;
        string password = 6;
        string created_at = 7;
        string updated_at = 8;
        string deleted_at = 9;

    }
}